apps/estoque/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: estoque
  namespace: demos
spec:
  selector: {app: estoque}
  ports:
  - port: 8080
    targetPort: 8080
