apps/estoque/route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: estoque
  namespace: estoque-demo
spec:
  to:
    kind: Service
    name: estoque
  port:
    targetPort: 8080
  tls:
    termination: edge
    insecureEdgeTerminationPolicy: Redirect
